Added, submitted review status translations in the homepage and JSON scripts.

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -226,7 +226,7 @@
                   </span>
                 </div>
                 <ion-chip style="margin-left: -5px" color="danger"
-                  >Ang itong report ay hindi pa nasusuri</ion-chip
+                translate>home.submitted-review-status</ion-chip
                 >
               </ion-col>
 
