--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -244,4 +244,31 @@
       </ion-card-content>
     </ion-card>
   </div>
+  <ion-modal [isOpen]="isModalOpen" [canDismiss]="canDismiss">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Paalala</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding" style="text-align: center">
+        <h1> Hindi maaring magpatuloy </h1>
+        <img 
+          src="assets/images/farmland-error.png" 
+        />
+        <p>
+          Nais naming ipaalam sa iyo na wala pang itinakdang lupang tataniman o (farmland) sa iyo. Ipaalam ito sa
+          namamahalang 'Big Brother' o tagapangasiwa sa inyong lugar. Hindi maaring magpatuloy sa Anikultura
+          dahil sa kakulangan na detalye na ito. <br><br>
+          Ibabalik ka namin sa simulang pahina.
+        </p>
+        <button
+          id="aniButton"
+          (click)="errorLogout();"
+        >
+        Naiintindihan.
+        </button>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
