Remove redundant translate tag

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -221,7 +221,7 @@
             >
               <ion-col size="9" style="color: black">
                 <div>
-                  <span class="text" style="font-weight: bold" translate>
+                  <span class="text" style="font-weight: bold">
                     {{ translateSeedStage(farmerReport.seedStage) | translate }}
                   </span>
                 </div>
