Update seed stage logic

--- a/src/app/home/modal/submit-report-modal.page.html
+++ b/src/app/home/modal/submit-report-modal.page.html
@@ -37,7 +37,7 @@
         </ng-template>
       </div>
 
-      <div *ngIf="isMarketable() && hasPhoto()">
+      <div *ngIf="isHarvested() && hasPhoto()">
         <ion-item lines="full">
           <ion-label position="floating" translate>
             home.marketable-confirmation</ion-label
